[project]
name = "khonliang-store"
version = "0.5.0"
description = "Bus-native store agent — artifact reads (Phase 2) + browser viewer (Phase 3) + local SQLite write surface (Phase 4a); composite read backend + bus deprecation follow"
requires-python = ">=3.11"
dependencies = [
    "khonliang-bus-lib",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
khonliang-store = "store.agent:main"

[tool.setuptools.packages.find]
include = ["store*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
